Remove all references to java.endorsed.dirs